--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@univerjs/core": "^0.1.13",
-    "@univerjs/design": "^0.1.13",
-    "@univerjs/docs": "^0.1.13",
-    "@univerjs/docs-ui": "^0.1.13",
-    "@univerjs/engine-formula": "^0.1.13",
-    "@univerjs/engine-render": "^0.1.13",
-    "@univerjs/sheets": "^0.1.13",
-    "@univerjs/sheets-formula": "^0.1.13",
-    "@univerjs/sheets-ui": "^0.1.13",
-    "@univerjs/ui": "^0.1.13",
+    "@univerjs/core": "0.4.2",
+    "@univerjs/design": "0.4.2",
+    "@univerjs/docs": "0.4.2",
+    "@univerjs/docs-ui": "0.4.2",
+    "@univerjs/engine-formula": "0.4.2",
+    "@univerjs/engine-render": "0.4.2",
+    "@univerjs/sheets": "0.4.2",
+    "@univerjs/sheets-formula": "0.4.2",
+    "@univerjs/sheets-formula-ui": "0.4.2",
+    "@univerjs/sheets-ui": "0.4.2",
+    "@univerjs/ui": "0.4.2",
     "core-js": "^3.37.1",
     "vue": "2.7.16"
   },
   "devDependencies": {
-    "@univerjs/vite-plugin": "^0.4.3",
+    "@univerjs/vite-plugin": "^0.5.0",
     "@vitejs/plugin-vue2": "^2.3.1",
     "vite": "^5.2.0"
   }
